compiler-core/src/snapshots/compiler_core__tokeniser__tests__fixtures___fibonacci_.snap
---
source: compiler-core/src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "fibo",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Keyword(
            If,
        ),
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        BinOp(
            DoubleEquals,
        ),
    ),
    Ok(
        Constant(
            Int(
                0,
            ),
        ),
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Constant(
            Int(
                0,
            ),
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Else,
        ),
    ),
    Ok(
        Keyword(
            If,
        ),
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        BinOp(
            DoubleEquals,
        ),
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Else,
        ),
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "fibo",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        BinOp(
            Minus,
        ),
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Name(
            "fibo",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        BinOp(
            Minus,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Export,
        ),
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "main",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "fibo",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "n",
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentDecr,
    ),
]
