compiler-core/src/snapshots/compiler_core__tokeniser__tests__fixtures___functions_.snap
---
source: compiler-core/src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "my_first_func",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "func_with_closure",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "top_stuff",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Name(
            "top_stuff",
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Export,
        ),
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "function_with_arguments",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Comma,
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        IndentDecr,
    ),
    Ok(
        Keyword(
            Function,
        ),
    ),
    Ok(
        Name(
            "single_argument_func",
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        IndentIncr,
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
    Ok(
        IndentDecr,
    ),
]
