compiler-core/src/snapshots/compiler_core__tokeniser__tests__fixtures___maths_.snap
---
source: compiler-core/src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                5,
            ),
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Minus,
        ),
    ),
    Ok(
        Constant(
            Int(
                3,
            ),
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Name(
            "y",
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Name(
            "z",
        ),
    ),
    Ok(
        BinOp(
            Minus,
        ),
    ),
    Ok(
        Constant(
            Int(
                4,
            ),
        ),
    ),
    Ok(
        Name(
            "w",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        OpenParen,
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
    Ok(
        CloseParen,
    ),
    Ok(
        Name(
            "v",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Int(
                2,
            ),
        ),
    ),
    Ok(
        BinOp(
            Multiply,
        ),
    ),
    Ok(
        Name(
            "x",
        ),
    ),
    Ok(
        BinOp(
            Plus,
        ),
    ),
    Ok(
        Constant(
            Int(
                1,
            ),
        ),
    ),
]
