compiler-core/src/snapshots/compiler_core__tokeniser__tests__fixtures___strings_.snap
---
source: compiler-core/src/tokeniser.rs
expression: tokens
---
[
    Ok(
        Name(
            "my_first_string",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Str(
                "hello",
            ),
        ),
    ),
    Ok(
        Name(
            "string_with_multiple_words",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Str(
                "lots of words here",
            ),
        ),
    ),
    Ok(
        Name(
            "empty_string",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Str(
                "",
            ),
        ),
    ),
    Ok(
        Name(
            "multiline_string",
        ),
    ),
    Ok(
        Equals,
    ),
    Ok(
        Constant(
            Str(
                "this baby\ngoes over\n\nmultiple lines.\n",
            ),
        ),
    ),
]
